# Ogen

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  STREAMING_ISSUE_REPORT.md  WORK_METHODOLOGY.md  handoff.md  pnpm-lock.yaml  pyproject.toml  start.bat  start.sh
.agents/: README.md
.agents/hooks/: README.md
.agents/skills/agent-workspace-unifier/: SKILL.md
.agents/skills/agent-workspace-unifier/agents/: openai.yaml
.agents/skills/agent-workspace-unifier/references/: policy.md
.agents/skills/agent-workspace-unifier/scripts/: unify_agent_workspace.py
.agents/templates/: README.md
.claude/skills/: agent-workspace-unifier
.claude/skills/claude-code-setup/: SKILL.md
.claude/skills/claude-code-setup/references/: context-engineering.md  four-layers.md
apps/front/: package.json
apps/front/src/lib/: design-studio.metadata.json  ds.ts
apps/front/src/lib/components/: Alert.svelte  Avatar.svelte  Badge.svelte  Breadcrumbs.svelte  Button.svelte  Card.svelte  Checkbox.svelte  CheckboxGroup.svelte  Chip.svelte  Container.svelte  DatePicker.svelte  Divider.svelte  (+39 more)
apps/front/src/routes/: +layout.svelte  +page.svelte
apps/server/: .env.example  main.py  pyproject.toml
apps/server/data/: knowledge.ttl
apps/server/ogen_data/: user_graph.trig
apps/server/tests/: conftest.py  test_api.py  test_connect.py  test_engine.py
docs/superpowers/plans/: 2026-05-27-streaming-bug-fixes.md  2026-05-28-pytest-test-suite.md
docs/superpowers/specs/: 2026-05-27-streaming-bug-fixes-design.md  2026-05-28-pytest-test-suite-design.md
(+2 files in other folders)
