[project]
name = "ogen-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "ogen-stream", # 이름 참조
    "langgraph",
    "langchain-openai",
    "langchain-core",
    "sse-starlette",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.uv.sources]
ogen-stream = { workspace = true }